# esp32

./: .gitignore
aidoll_v2/: Cargo.toml  sdkconfig.defaults
aidoll_v2/.cargo/: config.toml
aidoll_v2/src/: audio.rs  buttons.rs  config.rs  conversation.rs  deepgram_stt.rs  deepgram_tts.rs  groq_client.rs  hardware.rs  led.rs  lib.rs  llm.rs  main.rs  pipeline.rs  prompt.rs  ring_buffer.rs  stt.rs  tts.rs
aidoll_v2/tests/: test_buttons.rs  test_conversation.rs  test_llm.rs  test_pipeline.rs  test_stt.rs  test_tts.rs
board_test/: board_test.ino
button_scan/: button_scan.ino
harry_potter_doll/: audio_buffer.cpp  audio_buffer.h  audio_codec.cpp  audio_codec.h  config.h  deepgram.cpp  deepgram.h  elevenlabs.cpp  elevenlabs.h  generate_prompt.sh  groq.cpp  groq.h  harry_potter_doll.ino  laura.md  laura_prompt.h  rgb_feedback.cpp  rgb_feedback.h  secrets.h.example
harry_potter_doll/tests/: CMakeLists.txt  Makefile  test_audio_buffer.cpp  test_connection_pool.cpp  test_conversation.cpp  test_elevenlabs.cpp  test_groq_sse.cpp  test_integration.cpp  test_interrupts.cpp  test_pipeline.cpp  test_streaming_tts.cpp
harry_potter_doll/tests/mocks/: Adafruit_NeoPixel.h  Arduino.h  ArduinoWebsockets.h  WiFiClientSecure.h  Wire.h  esp_check.h  esp_err.h  esp_heap_caps.h  esp_log.h  esp_wifi.h
harry_potter_doll/tests/mocks/driver/: i2c.h
harry_potter_doll/tests/mocks/freertos/: FreeRTOS.h  semphr.h
harry_potter_doll/tests/mocks/mbedtls/: base64.h
rgb_demo/: rgb_demo.ino
