[package]
name = "aidoll_v2"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
anyhow = "1"
esp-idf-svc = { version = "0.50", features = ["experimental"] }
esp-idf-hal = "0.45"
esp-idf-sys = { version = "0.36", features = ["binstart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
embedded-svc = "0.28"

[build-dependencies]
embuild = "0.33"

[dev-dependencies]
# Tests run on host, not ESP32 — use these for unit tests only
