[package]
name = "aidoll_v2"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["esp32"]
esp32 = ["esp-idf-svc", "esp-idf-hal", "esp-idf-sys", "embedded-svc", "embuild"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# ESP32-only dependencies
esp-idf-svc = { version = "0.50", features = ["experimental"], optional = true }
esp-idf-hal = { version = "0.45", optional = true }
esp-idf-sys = { version = "0.36", features = ["binstart"], optional = true }
embedded-svc = { version = "0.28", optional = true }

[build-dependencies]
embuild = { version = "0.33", optional = true }
